--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+    font-family: 'Bedug';
+    src: url('/src/assets/fonts/Bedug-Regular.woff2') format('woff2'),
+         url('/src/assets/fonts/Bedug-Regular.woff') format('woff'),
+         url('/src/assets/fonts/Bedug-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+@font-face {
+    font-family: 'Trifelia';
+    src: url('/src/assets/fonts/Trifelia-Regular.woff2') format('woff2'),
+         url('/src/assets/fonts/Trifelia-Regular.woff') format('woff'),
+         url('/src/assets/fonts/Trifelia-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 
 
